Updated spacing issues

--- a/_sass/modules/_description.scss
+++ b/_sass/modules/_description.scss
@@ -1,77 +1,72 @@
-section{
+section {
 	@include grid-container;
 	@include text-size($medium);
-	padding:2em 2em;
+	padding: 2em;
 	// @include grid-visual;
-	@include respond-above(medium){
-		letter-spacing:-0.02em;
-		padding: 2em 0em;
+	@include respond-above(medium) {
+		letter-spacing: -0.02em;
+		padding: 2em 0;
 	};
 }
 
-.description{
+.description {}
 
-}
-
-.description__title{
-
+.description__title {
 	@include text-size($xxl);
-	color:rgb(0,255,0);
-	letter-spacing:-0.04em;
-
-	@include respond-above(small){
-		@include grid-column(3);
+	color: rgb(0,255,0);
+	letter-spacing: -0.04em;
+	@include respond-above(small) {
+		 @include grid-column(3);
 	};
-	@include respond-above(large){
-		@include grid-push(1);
+	@include respond-above(large) {
+		 @include grid-push(1);
 	};
 }
 
 .description-text-container,
-.gallery-of-work{
+.gallery-of-work {
 	@extend %antialiased;
-	@include respond-above(small){
-		@include grid-column(9);
+	@include respond-above(small) {
+		 @include grid-column(9);
 	};
-
-	@include respond-above(large){
-		@include grid-column(7);
+	@include respond-above(large) {
+		 @include grid-column(7);
 	};
-
-	@include respond-above(huge){
-		@include grid-column(6);
+	@include respond-above(huge) {
+		 @include grid-column(6);
 	};
 }
 
-
-li{
-	margin-bottom:0.5em;
+li {
+	margin-bottom: 0.5em;
 }
 
-ol{
+ol {
 	counter-reset: item;
+	padding: 0;
+	margin: 0;
 
-	li{
+	li {
 		display: block;
-		margin-bottom: .5em;
+		margin-bottom: 0.5em;
 		margin-left: 2em;
 
-		&:before{
+		&:before {
 			display: block;
-			position:absolute;
+			position: absolute;
 			content: counter(item);
 			width: 1em;
-			height:1em;
+			height: 1em;
 			margin-left: -3em;
-			margin-right:1em;
-			margin-top:-0.25em;
+			margin-right: 1em;
+			margin-top: -0.25em;
 			@extend %sans-serif;
-			font-weight:bold;
-			border:2px solid black;
-			color:black;
-			padding:0.5em;
-			font-size:0.7em;
-			text-align:center;
+			font-weight: bold;
+			border: 2px solid black;
+			color: black;
+			padding: 0.5em;
+			font-size: 0.7em;
+			text-align: center;
 			border-radius: 50%;
 		}
 
@@ -80,59 +75,64 @@ ol{
 				counter-increment: item;
 			}
 		}
-		
-		&:hover:before{
-			color:rgb(0,255,0);
-			border-color:rgb(0,255,0);
+
+		&:hover:before {
+			color: rgb(0,255,0);
+			border-color: rgb(0,255,0);
 		}
 
 		ul {
-			list-style:none;
+			list-style: none;
+
 			li {
 				display: block;
-				margin-bottom: .5em;
+				margin-bottom: 0.5em;
 				margin-left: 2em;
-				&:before{
+
+				&:before {
 					display: block;
-					position:absolute;
-					content:"⌖";
+					position: absolute;
+					content: "⌖";
 					width: auto;
 					height: auto;
-					font-size:1.5em;
+					font-size: 1.5em;
 					margin-left: -1.25em;
-					margin-top:-.25em;
+					margin-top: -.25em;
 					margin-right: 0;
 					border: none;
 					padding: 0;
 					border-radius: none;
 				}
 
-				&:hover:before{
-					color:rgb(0,255,0);
+				&:hover:before {
+					color: rgb(0,255,0);
 				}
 			}
 		}
 	}
-
 }
 
-ul{
-	list-style:none;
-	li{
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+
+	li {
 		display: block;
-		margin-bottom: .5em;
+		margin-bottom: 0.5em;
 		margin-left: 2em;
-		&:before{
+
+		&:before {
 			display: block;
-			position:absolute;
-			content:"⌖";
-			font-size:1.5em;
+			position: absolute;
+			content: "⌖";
+			font-size: 1.5em;
 			margin-left: -1.25em;
-			margin-top:-.25em;
+			margin-top: -.25em;
 		}
 
-		&:hover:before{
-			color:rgb(0,255,0);
+		&:hover:before {
+			color: rgb(0,255,0);
 		}
 	}
 }
